export type EtatMateriel = 'MAINTENANCE' | 'AUSOL' | 'ENVOL';
