package fr.uga.miage.m1.Domain.enums

enum class Etat {
    LIBRE, OCCUPE, MAINTENANCE
}